Validate .nlogox conversion against a real NetLogo 7.0.4 engine; fix 3 real writer bugs + 1 reader regression
Closes the toolkit's biggest known gap now that a NetLogo 7 desktop install
is available. validation/run_smoke_tests.py runs every model's .nlogox
headless (bypassing netlogo-headless.bat's quoting bug on install paths
with spaces) and confirms 14/14 compile and run cleanly.

Found by diffing against NetLogo 7.0.4's own bundled sample .nlogox models:
- `kind`/`direction` are capitalized enum tokens (Observer/Horizontal),
  not lowercase as the public wiki documents.
- Every code/text-bearing element (<code>, <button>, <monitor>, plot/pen
  <setup>/<update>, <note>, <input>) holds content as its own text/CDATA,
  never a nested <source>/<text>/<value> child.
- Chooser numeric choices use type="double", not type="number".

Fixing the writer without fixing model_card.py's reader (which had the
same wrong assumption, since it round-tripped against the writer's own
prior output) would have silently zeroed out every model's procedures/
entry_points/control code -- both are fixed together.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>